<resources>
    <string name="app_name">体脂秤</string>
    <string name="login">登录</string>
    <string name="loginOut">退出登录</string>
    <string name="guideTest">立即体验</string>
    <string name="up">上一步</string>
    <string name="down">下一步</string>
    <string name="sure">确定</string>
    <string name="ok">好</string>
    <string name="delete">删除</string>
    <string name="send">发送</string>
    <string name="keyback">再按一次返回键退出程序</string>
    <string name="shareTip">我今天的最新体重,速来围观吧</string>
    <string name="alarmTip1">时间到了,该称重了哦!</string>
    <string name="alarmTip2">点击一下,就可以称重了哦!</string>
    <string name="today">今天</string>
    <string name="day">天</string>
    <string name="week">周</string>
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="timeName">时间</string>
    <string name="timeName1">时刻</string>
    <string name="weight">体重</string>
    <string name="allCheck">全选</string>
    <string name="logonVisitor">访客模式</string>
    <string name="logonRegister">注册</string>
    <string name="logonLogin">登录</string>
    <string name="logonTip1">登录则表示您同意遵守OKOK体重秤的</string>
    <string name="logonTip2">用户协议与隐私政策</string>
    <string name="registerPhoneNumber">手机号码</string>
    <string name="registerPassword">6-18位,需要数字和字母组合</string>
    <string name="registerVerification">验证码</string>
    <string name="registerGetVerification">获取验证码</string>
    <string name="registerTip">注册表示您同意遵守用户协议及隐私政策</string>
    <string name="registerForgetPwd">忘记密码？</string>
    <string name="registerOtherLogin">第三方账号登录</string>
    <string name="forgetPassword">重置密码</string>
    <string name="forgetNewPassword">新密码</string>
    <string name="forgetSurePassword">确认新密码</string>
    <string name="forgetSubmit">提交</string>
    <string name="rlTitle1">您需要登录后才能操作</string>
    <string name="rlLogin">已有账号,去登录</string>
    <string name="rlRegister">还没有账号,立即注册</string>
    <string name="rlAccountEmptyTip">账号信息不能为空,请填写账号</string>
    <string name="rlPwdEmptyTip">密码不能为空,请输入密码</string>
    <string name="rlPwdInputTip">请输入确认密码</string>
    <string name="rlLengthLimitTip">密码长度应该为6~18位，需输入数字和字母组合</string>
    <string name="rlPwdDifferentTip">两次输入的密码不相同</string>
    <string name="rlVerificationCodeTip">验证码不能为空,请输入收到的验证码</string>
    <string name="rlVerificationCodeErrTip">抱歉,短信验证码不正确</string>
    <string name="rlPhoneNumberTip">请输入正确的手机号码</string>
    <string name="rlPwdTip">请输入密码</string>
    <string name="rlPwdOrAccoutErr">抱歉,账号或密码错误</string>
    <string name="home_index_weight">体重记录</string>
    <string name="home_index_food_exercise">饮食运动</string>
    <string name="weight_unit">体重(kg)</string>
    <string name="fat_unit">体脂率(%)</string>
    <string name="versionErr">版本错误</string>
    <string name="versionHead"> Android 版本:</string>
    <string name="versionFoot"> 低于4.3版本, 需升级您的Android版本!</string>
    <string name="versionNew">软件已是最新版本</string>
    <string name="menuWeightDynamic">动态</string>
    <string name="menuWeighttrend">趋势</string>
    <string name="menuFamily">家庭成员</string>
    <string name="menuSetting">设置</string>
    <string name="menuServer">服务</string>
    <string name="menuAboutMe">关于我</string>
    <string name="default_signature">一句话介绍你自己</string>
    <string name="aboutHead">头像</string>
    <string name="aboutNickname">昵称</string>
    <string name="aboutSex">性别</string>
    <string name="aboutBirthday">出生年月</string>
    <string name="aboutHeight">身高</string>
    <string name="aboutWeightGoal">目标体重</string>
    <string name="aboutSignature">个性签名</string>
    <string name="aboutModifySignature">修改签名</string>
    <string name="aboutGoalUnit">目标体重（%1$s）</string>
    <string name="roleWeightcur">当前体重</string>
    <string name="newInitWeight">新的初始体重</string>
    <string name="memberDeleteTip">删除用户时,该用户的称重记录也会被删除,您确定删除用户吗?</string>
    <string name="addNewRole">添加新成员</string>
    <string name="myselfAddName">昵称</string>
    <string name="myselfAddSex">选择性别:</string>
    <string name="myselfAddAge">生日</string>
    <string name="myselfAddHeight">身高</string>
    <string name="myselfNameTip">取一个与众不同的昵称,有利于你的身体信息保存</string>
    <string name="myselfSexTip">不同的性别会产生不同的健康目标,而且也会有不同的健康指导信息</string>
    <string name="myselfAgeTip">根据出生日期得到年龄,不同的年龄段对于健康的目的需求不一样</string>
    <string name="myselfHeightTip">身高是健康标准的重要信息来源,将用于计算BMI、正常体重的范围等</string>
    <string name="settingAccount">账号设置</string>
    <string name="settingDevice">我的设备</string>
    <string name="settingUnit">单位设置</string>
    <string name="settingWeightTip">称重提醒</string>
    <string name="settingFeedback">帮助与反馈</string>
    <string name="feedbackQestion">反馈问题</string>
    <string name="feedbackMine">我的提问</string>
    <string name="feedbackCommon">常见问题</string>
    <string name="feedbackContactsTip">请留下您的手机号，以便我们回复您</string>
    <string name="feedbackContentTip">请问您遇到了什么问题</string>
    <string name="settingOfficialWebsite">访问官网</string>
    <string name="settingAgreement">隐私与协议</string>
    <string name="settingAboutOkok">关于OKOK</string>
    <string name="settingWifi">仅WI-FI同步</string>
    <string name="settingClear">一键清除缓存</string>
    <string name="settingAcountPhone">手机号</string>
    <string name="settingAcountPwd">密码设置</string>
    <string name="settingAcountQQ">QQ</string>
    <string name="settingAcountSina">新浪微博</string>
    <string name="settingAcountother">第三方账号绑定</string>
    <string name="settingDeviceUnbound">解除绑定</string>
    <string name="settingDeviceInfo">设备信息</string>
    <string name="settingWeight">体重秤</string>
    <string name="settingDeviceUnboundTip">解除绑定后,手机将无法连接智能秤,此时手机可以绑定其他智能秤</string>
    <string name="settingAboutOKOK">了解体重秤</string>
    <string name="settingBoundOKOK">绑定体重秤</string>
    <string name="settingCheckVersion">检查更新</string>
    <string name="settingVersionTip">版权所有 Copyright ©2017 渐轻 Technology</string>
    <string name="settingVersion">当前版本：V</string>
    <string name="settingFeedbackTip">如遇到问题,请留下您宝贵的意见~</string>
    <string name="settingFeedBackTip">反馈内容为空，请写点意见吧~</string>
    <string name="settingWebsite">官网</string>
    <string name="settinglicenseAndSecarit">用户协议与隐私政策</string>
    <string name="settingAppUpdateTestNo">没有检测到新版本</string>
    <string name="settingAppUpdateTestHas">有新版本:</string>
    <string name="settingAppUpdateTime">更新时间:\n</string>
    <string name="settingAppUpdateNotice">软件更新通知</string>
    <string name="settingAppDown">当前下载:</string>
    <string name="settingAppUpdateNo">不更新</string>
    <string name="settingAppUpdateYes">更新</string>
    <string name="settingAppDownTip">正在下载</string>
    <string name="settingAppDownComplete">下载完成,点击安装。</string>
    <string name="settingAppDownStart">开始下载</string>
    <string name="settingAppDownFailed">下载失败</string>
    <string name="trendWeightRecord">体重记录</string>
    <string name="trendBMIRecord">BMI记录</string>
    <string name="trendFatRateRecord">脂肪率</string>
    <string name="trendMuscleRecord">肌肉率</string>
    <string name="trendBoneRecord">骨量记录</string>
    <string name="trendVisceralFatRecord">内脏脂肪率</string>
    <string name="trendWaterRecord">水份</string>
    <string name="trendMetabolismRecord">基础代谢率</string>
    <string name="trendHeightest">最高:</string>
    <string name="trendLowest">最低:</string>
    <string name="trendHeightest1">最高</string>
    <string name="trendLowest1">最低</string>
    <string name="trendCompareLastWeek">比上周:</string>
    <string name="trendCompareLastWeek1">比上周</string>
    <string name="trendCompareLastMonth">比上月:</string>
    <string name="trendCompareLastQuarter">比上季度:</string>
    <string name="trendAverage">平均</string>
    <string name="trendWeight">称重:</string>
    <string name="trendNoDataMore">没有更多数据了</string>
    <string name="trendWeightTrend">体重趋势</string>
    <string name="trendDateSelect">日期选择</string>
    <string name="trendNoDataTip">还没测量呢，无法生成趋势，多测量几天再看看吧</string>
    <string name="myselfNoAdd">成员数已经到上限</string>
    <string name="reportCode">分</string>
    <string name="reportreach">达标%1$s项</string>
    <string name="reportUnreach">不达标%1$s项</string>
    <string name="reportStandard1">您的分数有点低哦，请您根据不达标项的建议，调整饮食结构、合理运动、按时作息，健康每一天。</string>
    <string name="reportStandard2">您的身体需要引起注意了！请您根据不达标项的建议，调整饮食结构、合理运动、按时作息，健康每一天。</string>
    <string name="reportStandard3">您的身体状况良好！请您根据不达标项的建议，调整饮食结构、合理运动、按时作息，健康每一天。</string>
    <string name="reportStandard4">恭喜，您的检测全部达标啦!太棒了，身体各项指标在合理的健康范围!注意保持，作息规律，健康每一天。</string>
    <string name="reportAxungeTip">身体脂肪包含皮下脂肪和内脏脂肪，身体脂肪率是指体重中身体脂肪所占的比例。测量脂肪率比单纯的只测量体重更能反映我们身体的脂肪水平（肥胖程度）。体脂肪超出正常范围称之为“肥胖”。</string>
    <string name="reportAxungeSlimTip">您的身体脂肪重量偏低，脂肪在人体的营养中有着极其重要的功用。它不仅是人体代谢的主要能源，而且是人体发育及健康所必需的物质。过少的脂肪会导致内分泌失调哦。</string>
    <string name="reportAxungeStandardTip">身体脂肪标准，请注意保持足够的水分，增强代谢哦。</string>
    <string name="reportAxungeExtraTip">身体脂肪偏高啦。过高的体脂不仅仅会造成身材臃肿，更是各种慢性病的导火索，请立即减少高油高热量食物的摄入，努力恢复到健康水平。</string>
    <string name="reportAxungeObesityTip">身体脂肪处于比较高的水平了。过胖易导致心脏病、高血压、高血脂和2型糖尿病等代谢类疾病。请减少高油高热量食物摄入，保持定期运动习惯，努力恢复健康身体和好身材。</string>
    <string name="reportBMITip">BMI指数是英文为Body Mass Index的简称,即身体质量指数,称简体质指数。是用体重公斤数除以身高米数平方得出的数字,是目前国际上常用的衡量人体胖瘦程度以及是否健康的一个标准。</string>
    <string name="reportBMISlimTip">体重偏瘦，建议您通过少吃多餐来补充能量，多补充些蛋白质，让多余的能量转化为肌肉和脂肪，同时均衡营养，坚持锻炼，身材会更好。</string>
    <string name="reportBMIStandardTip">体重在合理的范围内。注意保持，生活作息规律，注意摄入充足水分，增强代谢。饭后记走一走是保持良好身材的秘方。</string>
    <string name="reportBMIExtraTip">体重偏胖，请远离高热量食物，同时增加运动量来消耗多余的脂肪，管住嘴、迈开腿，努力恢复健康身体和好身材。</string>
    <string name="reportBMIObesityTip">体重已经是肥胖啦，当前需要严格控制摄入，请立刻远离高油高热量的食物，体重过胖会增加心脏病、高血压等疾病的发病风险，请注意改善生活习惯，管住嘴、迈开腿。</string>
    <string name="reportMuscleTip">肌肉率是根据人体肌肉总量和人体体重、身高等相结合得到的人体的一个比例值,这个值的范围决定一个人的身体健康状况以及力量的多少。</string>
    <string name="reportMuscleLowTip">您的肌肉量偏低，肌肉是消耗身体热量的主力军，而运动过少和节食是肌肉流失的主要原因，以健康的方式减掉多余脂肪和体重，从简单点饭后步行开始吧。</string>
    <string name="reportMuscleStandardTip">肌肉量达标。增加肌肉量能让您更快地消耗热量，以最健康的方式减掉多余脂肪和体重。请保持适当的运动量和健康的饮食习惯。</string>
    <string name="reportMuscleHightTip">肌肉量优良。增加肌肉量能让您更快地消耗热量，以最健康的方式减掉多余脂肪和体重。请保持适当的运动量和健康的饮食习惯。</string>
    <string name="reportVisceraTip">内脏脂肪是人体脂肪中的一种,与皮下脂肪（也就是我们平时所了解的身体上可以摸得到的“肥肉”）不同,它围绕着人的脏器,主要存在于腹腔内。</string>
    <string name="reportVisceraStandardTip">暂时无需担心，请继续保持均衡的饮食和适量的运动</string>
    <string name="reportVisceraExtraTip">请以标准体重为目标，在进行适量运动的同时，限制食物热量的摄入</string>
    <string name="HaierBluetooth_title">蓝牙连接</string>
    <string name="HaierBluetooth_open_bluetooth">请先开启蓝牙</string>
    <string name="settingUnitMKM">公制（厘米）</string>
    <string name="settingUnitYchi">英制（英尺、英寸）</string>
    <string name="settingUnitSjin">市斤（1 斤 = 500克）</string>
    <string name="settingUnitGjin">公制（公斤、千克）</string>
    <string name="settingUnitYbang">英制（磅）</string>
    <string name="settingUnitST">英制（英石:磅）</string>
    <string name="settingLongUnit">设置长度单位</string>
    <string name="settingWeightUnit">设置重量单位</string>
    <string name="reportTip1">亲~您的称重时间到了,</string>
    <string name="reportTip2">记得准时称重哟!</string>
    <string name="tutorialUnbound">先不绑定了</string>
    <string name="tutorialBoundTip">已经发现智能秤，请确认秤显示的数值和搜索数值一样，即可确认绑定</string>
    <string name="tutorialReSearch">重新搜索</string>
    <string name="tutorialSureBound">确认绑定</string>
    <string name="tutorialboundTitle">请轻踏或按压秤面，并保持常亮</string>
    <string name="tokenTitle">安全提示</string>
    <string name="tokenTip">登录失败，请重新登录</string>
    <string name="network_error">没有网络连接,请稍候再试</string>
    <string name="network_error_hint">没有网络连接,请开启网络后重试</string>
    <string name="reset_loading">重新加载</string>
    <string name="bPhealthtip1">此分类基于医院诊部对保持坐姿者测量的血压值</string>
    <string name="bPhealthtip2">注：高血压没有普遍公认的定义。但是，收缩压低于100mmHg者即被视为低血压。</string>
    <string name="bPhealthtip3">最近的研究建议在家测量时使用以下值做为高血压指标</string>
    <string name="systolicPressure">收缩压</string>
    <string name="diastolicPressure">舒张压</string>
    <string name="bPhealthtip4">此标准针对家庭血压测量</string>
    <string name="buyWeighTip">还没有秤，买一台</string>
</resources>