<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bloodglucose_gray"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone"
    android:id="@+id/errorLayout"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_error"
        android:textColor="@color/text_black"
        android:textSize="17sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_error_hint"
        android:textColor="@color/text_gray"
        android:layout_marginTop="@dimen/tenDp"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/errorBto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_loading"
        android:textColor="@color/text_black"
        android:layout_marginTop="@dimen/tenDp"
        android:paddingTop="@dimen/tenDp"
        android:paddingBottom="@dimen/tenDp"
        android:paddingLeft="@dimen/thirtyDp"
        android:paddingRight="@dimen/thirtyDp"
        android:textSize="15sp"
        android:background="@drawable/network_error_bto_selecter"
        />
</LinearLayout>
