<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bloodglucose_gray"
    android:orientation="vertical">
    <com.jq.code.view.text.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/bPhealthtip1"
        android:textColor="@color/text_gray"
        custom:customtTextSize="26"
        />
    <com.jq.code.view.text.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/tenDp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="@dimen/tenDp"
        android:text="@string/bPhealthtip2"
        android:textColor="@color/bloodpressure_level6"
        custom:customtTextSize="30"
        />
    <com.jq.code.view.text.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/fortyDp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="@dimen/fiveDp"
        android:text="@string/bPhealthtip3"
        android:textColor="@color/text_gray"
        custom:customtTextSize="26"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="12dp"
        android:background="@color/white"

        >
        <com.jq.code.view.text.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:text="@string/systolicPressure"
            android:layout_weight="1"
            custom:customtTextSize="34"
            />
        <com.jq.code.view.text.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:paddingRight="@dimen/twentyDp"
            android:text=">135 \nmmHg"
            custom:customtTextSize="32"
            />

    </LinearLayout>
    <include layout="@layout/gray_line_layout" ></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="@dimen/tenDp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="@dimen/tenDp"
        android:background="@color/white"

        >
        <com.jq.code.view.text.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:text="@string/diastolicPressure"
            android:layout_weight="1"
            custom:customtTextSize="34"
            />
        <com.jq.code.view.text.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:paddingRight="@dimen/twentyDp"
            android:text=">85 \nmmHg"
            custom:customtTextSize="32"
            />
    </LinearLayout>
    <com.jq.code.view.text.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/tenDp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="@dimen/tenDp"
        android:textStyle="bold"
        android:text="@string/bPhealthtip4"
        android:textColor="@color/text_gray"
        custom:customtTextSize="26"
        />
</LinearLayout>